--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-08-?? Version 0.9.1
+
+* updated dependencies (jQuery 1.7.2, jQuery Mobile 1.2.0 alpha 1)
+
 2012-08-02 Version 0.9.0
 
 * new: french translation, thanks to Thomas Parvais
