--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-08-08 Version 0.9.2
+
+* fixed issue #4, sort order of books in series now according to field series_index
+
 2012-08-08 Version 0.9.1
 
 * updated dependencies (jQuery 1.7.2, jQuery Mobile 1.2.0 alpha 1)
