--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
-2012-09-XX Version 0.9.4
+2012-12-XX Version 1.0.0
 
-* 
+* changed: title entries now show available formats
+* new: title search for OPDS
 * new: installation check page, installcheck.php
 * new: dutch translation
 * updated dependencies (jQuery 1.8.3, jQuery Mobile 1.2.0)
