--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2013-05-07 Version 1.1.0
+
+* Added custom columns display to title details page, issue #33
+* Upgraded Javascript dependencies
+* Fixed: display of back button, issue #31
+* Added a global search, displaying the first X results for every category, issue #17
+* Added link to installation check page if the admin page has errors, issue #28
+* Fixed: database file was accessible (@janeczku, issue #45)
+* Added sending books via e-mail (@janeczku)
+* Internal DB will be created if it doesn't exist
+* Fixed: Logging configuration (@janeczku, issue #34)
+* Added tag based download protection (@blowk, issue #39)
+
 2012-12-XX Version 1.0.0
 
 * changed: title entries now show available formats
