--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
-2013-08-01 Version 1.2.0
+2013-08-XX Version 1.2.0-alpha
 
+* dropped download protection and added login system
+* Upgraded dependency jQuery Mobile to 1.3.2
 * Upgraded dependency Slim to version 2.3.1
 * Added dependeny slim/views, removed slim/extras
 * Upgraded dependency Twig to 1.13.1
