--- a/ChangeLog
+++ b/ChangeLog
@@ -4,7 +4,8 @@
 * Add book languages to the listviews and title details page, issue #56
 * The series index number is now displayed in the series details screen, issue #58
 * Dropped download protection and added login system, issue #47
-* Upgraded dependency jQuery Mobile to 1.3.2
+* Upgraded dependency jQuery Mobile to 1.4.2-alpha.2
+* Upgraded dependency jQuery to 1.10.2
 * Upgraded dependency Slim to version 2.3.1
 * Added dependeny slim/views, removed slim/extras
 * Upgraded dependency Twig to 1.13.1
