--- a/ChangeLog
+++ b/ChangeLog
@@ -1,13 +1,13 @@
-2013-YY-XX Version 1.2.0-𝛂
+2014-02-DD Version 1.2.0
 
 * Added author metadata handling (thumbnail, links, notes)
 * Separated Calibre and BicBucStriim DB handling
 * Replaced PHP mail support with more flexible SwiftMailer
 * Added ID links to title details and link management to admin section, issue #60
 * Add book languages to the listviews and title details page, issue #56
-* The series index number is now displayed in the series details screen, issue #58
+* The series index number is now displayed in the series and title details scrrens, issuea #58, #71
 * Dropped download protection and added login system, issue #47
-* Upgraded dependency jQuery Mobile to 1.4.2-alpha.2
+* Upgraded dependency jQuery Mobile to 1.4.0
 * Upgraded dependency jQuery to 1.10.2
 * Upgraded dependency Slim to version 2.3.1
 * Added dependeny slim/views, removed slim/extras
