--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-02-18 Version 1.2.1
+
+* Included fix for issue #68 (@janeczku)
+
 2014-02-15 Version 1.2.0
 
 * Added author metadata handling (thumbnail, links)
