Added version 1.2.2 details to change log

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2014-03-30 Version 1.2.2
+
+* Fixed issue #85 
+
+* Included fix for issue #68 (@janeczku)
 2014-02-18 Version 1.2.1
 
 * Included fix for issue #68 (@janeczku)
