--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,7 @@
 * Added pull request #103 (@jampot), add series name/number to emailed files
 * Clarified the requirements for the ap, #122
 * Added icon for Apple home screens etc, #97
+* Added pull request #104 (@jampot), set user roles in admin menu
 
 2014-07-20 Version 1.2.4
 
