--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2015-MM-DD Version 1.X.Y
+
+*
+
+2015-09-11 Version 1.2.6
+* Security changes: protection against SQL injection, see #175
+
 2015-05-27 Version 1.2.5
 * Updated dependencies: Slim 2.4.3, Twig 1.16
 * Updated jQuery Mobile dependency
