Added cookie path handling via Aura\Session to enable multiple instances on the same server with login, fixes #173.
By default session cookies used the "/" path. With multiple instances on the same server this meant that a session was valid for all instances on this server. The new session handling uses the instance path, e.g. .../bbs, to  qualify a session cookie for only this instance.

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
 * Added admin configuration to specify the kind of date used for sorting (timestamp, pubdate or modified)
 * Updated layout
 * Replaced outdated auth library Slim\Strong with Aura\Auth
+* Added Aura\Session library to handle sessions properly, #173
 
 2015-09-11 Version 1.2.6
 * Security changes: protection against SQL injection, see #175
