--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2015-10-05 Version 1.3.3
+
+* Fixed bad SQL for OPDS tag handling
+* Merged improved counter handling for empty DBs by @OzzieIsaacs
+
+2015-10-03 Version 1.3.2
+
+* More SQL changes for QNAP users
+
+2015-10-01 Version 1.3.1
+
+* Correction for configuration loading in PHP 5.5+
+
 2015-10-01 Version 1.3.0
 
 * Added sorting by date to books view #116 #99 #50
