--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2015-10-08 Version 1.3.4
+
+* Merged fixes by @Chouchen for installcheck.php (Calibre library problem detection)
+* Fixed authentication for OPDS request
+
+
 2015-10-05 Version 1.3.3
 
 * Fixed bad SQL for OPDS tag handling
