--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,11 @@
+2015-11-22 Version 1.3.5
+
+* Fixed tag resolution and easy mode, #190
+
 2015-10-08 Version 1.3.4
 
 * Merged fixes by @Chouchen for installcheck.php (Calibre library problem detection)
 * Fixed authentication for OPDS request
-
 
 2015-10-05 Version 1.3.3
 
