--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2015-12-21 Version 1.3.6
+
+* Handled more edge cases for old or incorrect session cookies to make the transition easier
+
 2015-11-22 Version 1.3.5
 
 * Fixed tag resolution and easy mode, #190
