--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2016-04-XX Version 1.4.0
+
+* Fixed #200, bad parameter tests for id templates
+* Added Hungarian translation by @gersey, #202
+
 2015-12-21 Version 1.3.6
 
 * Handled more edge cases for old or incorrect session cookies to make the transition easier
